--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <a href="#" class="Home">Home</a>
                 <a href="#about_me" class="Aboutme">About Me</a>
                 <a href="#certificationspart" class="Skills">My Certifications</a>
-                <a href="#" class="Services">Services</a>
+                <a href="#my_services" class="Services">Services</a>
                 <a href="#" class="Contact">Contact</a>
             </div>
         <div class="outer_conme_div">
@@ -101,136 +101,142 @@
     <H2 class="my-specializations">Professional Certifications</H2>
 
 
-<div class="spe_boxes">
-    <div class="box1"> 
-        <h3 class="spe_name1">Google Data Analytics</h3>
-        <p class="isued_by1">Issued by: Google</p>
-        <a class="link1" href="https://www.coursera.org/account/accomplishments/specialization/certificate/8ZOPXTFGKVFS" target="_blank"  >View Certificate</a>
-        <p class="isued_on1">Issued on: Aug 21, 2025</p>
-    </div>
-    <div class="box2">
-        <h3 class="spe_name2">Google AI Essentials</h3>
-        <p class="isued_by2">Issued by: Google</p>
-        <a class="link2" href="https://www.coursera.org/account/accomplishments/specialization/certificate/SM2GCUB28PFQ" target="_blank" >View Certificate</a>
-        <p class="isued_on2">Issued on: 20 Aug, 2025 </p>
-    </div>
-</div>
-
-<div class="my_certis_heading">
-    <h1 class="cert_heading">Other Certifications</h1>
-</div>
-
-<div class="cer_boxes">
-    <div class="box3">
-        <p class="issued_by">Issued by: Google</p>
-        <a  class="certificate_links" href="https://www.coursera.org/account/accomplishments/certificate/VEYSAJMEDNIM" target="_blank">View Certificate</a>
-        <p class="issued_on">Issued on: 11 Aug, 2025</p>
-    </div>
-    <div class="box4">
-        <p class="issued_by">Issued by: DeepLearning.AI</p>
-        <a  class="certificate_links" href="https://www.coursera.org/account/accomplishments/certificate/D75HPBWP92WI" target="_blank">View Certificate</a>
-        <p class="issued_on">Issued on: 6 Aug, 2025</p>
-    </div>
-    <div class="box5">
-        <p class="issued_by">Issued by: Microsoft</p>
-        <a  class="certificate_links" href="https://www.coursera.org/account/accomplishments/certificate/EEWLIXQYPVKS" target="_blank">View Certificate</a>
-        <p class="issued_on">Issued on: 14 Jul, 2025</p>
-    </div>
-    <div class="box6">
-        <p class="issued_by">Issued by: IBM</p>
-        <a  class="certificate_links" href="https://www.coursera.org/account/accomplishments/certificate/U99SSU1SJEFY" target="_blank">View Certificate</a>
-        <p class="issued_on">Issued on: 18 Jul, 2025</p>
-    </div>
-    <div class="box7">
-        <p class="issued_by">Issued by: Google</p>
-        <a  class="certificate_links" href="https://www.coursera.org/account/accomplishments/certificate/OY89S1M75G3X" target="_blank">View Certificate</a>
-        <p class="issued_on">Issued on: 20 Aug, 2025</p>
-    </div>
-    <div class="box8">
-        <p class="issued_by">Issued by: Microsoft</p>
-        <a  class="certificate_links" href="https://www.coursera.org/account/accomplishments/certificate/NCYW8KPM2FN7" target="_blank">View Certificate</a>
-        <p class="issued_on">Issued on: 5 Aug, 2025</p>
-    </div>
-    <div class="box9">
-        <p class="issued_by">Issued by: Coursera</p>
-        <a  class="certificate_links" href="https://www.coursera.org/account/accomplishments/certificate/UF4ID46W9NTC" target="_blank">View Certificate</a>
-        <p class="issued_on">Issued on: 9 Jul, 2025</p>
-    </div>
-    <div class="box10">
-        <p class="issued_by">Issued by: Google</p>
-        <a  class="certificate_links" href="https://www.coursera.org/account/accomplishments/certificate/HFDCDJ5SXSZ4" target="_blank">View Certificate</a>
-        <p class="issued_on">Issued on: 19 Aug, 2025</p>
-    </div>
-    <div class="box11">
-        <p class="issued_by">Issued by: Google</p>
-        <a  class="certificate_links" href="https://www.coursera.org/account/accomplishments/verify/V4TLR6NVYLC5" target="_blank">View Certificate</a>
-        <p class="issued_on">Issued on: 19 Aug, 2025</p>
-    </div>
-    <div class="box12">
-        <p class="issued_by">Issued by: Google</p>
-        <a  class="certificate_links" href="https://www.coursera.org/account/accomplishments/certificate/8GZJ9SEZLYKY" target="_blank">View Certificate</a>
-        <p class="issued_on">Issued on: 29 Jul, 2025</p>
-    </div>
-    <div class="box13">
-        <p class="issued_by">Issued by: Google</p>
-        <a  class="certificate_links" href="https://www.coursera.org/account/accomplishments/certificate/48IFCMN7Z50A" target="_blank">View Certificate</a>
-        <p class="issued_on">Issued on: 24 Jul, 2025</p>
-    </div>
-    <div class="box14">
-        <p class="issued_by">Issued by: Google</p>
-        <a  class="certificate_links" href="https://www.coursera.org/account/accomplishments/certificate/F1UORVYWZ1N6" target="_blank">View Certificate</a>
-        <p class="issued_on">Issued on: 26 Jul, 2025</p>
-    </div>
-    <div class="box15">
-        <p class="issued_by">Issued by: Google</p>
-        <a  class="certificate_links" href="https://www.coursera.org/account/accomplishments/certificate/ST1X0F9FSGGV" target="_blank">View Certificate</a>
-        <p class="issued_on">Issued on: 19 Aug, 2025</p>
-    </div>
-    <div class="box16">
-        <p class="issued_by">Issued by: Google</p>
-        <a  class="certificate_links" href="https://www.coursera.org/account/accomplishments/certificate/0A27RY7OUY74" target="_blank">View Certificate</a>
-        <p class="issued_on">Issued on: 21 Aug, 2025</p>
-    </div>
-    <div class="box17">
-        <p class="issued_by">Issued by: Google</p>
-        <a  class="certificate_links" href="https://www.coursera.org/account/accomplishments/certificate/BKKV8KK9AX2D" target="_blank">View Certificate</a>
-        <p class="issued_on">Issued on: 21 Aug, 2025</p>
-    </div>
-    <div class="box18">
-        <p class="issued_by">Issued by: UCI</p>
-        <a  class="certificate_links" href="https://www.coursera.org/account/accomplishments/certificate/0IPZAULNRZEO" target="_blank">View Certificate</a>
-        <p class="issued_on">Issued on: 19 Jul, 2025</p>
-    </div>
-    <div class="box19">
-        <p class="issued_by">Issued by: Google</p>
-        <a  class="certificate_links" href="https://www.coursera.org/account/accomplishments/certificate/4PMWWIQ74185" target="_blank">View Certificate</a>
-        <p class="issued_on">Issued on: 21 Aug, 2025</p>
-    </div>
-    <div class="box20">
-        <p class="issued_by">Issued by: Google</p>
-        <a  class="certificate_links" href="https://www.coursera.org/account/accomplishments/certificate/QDVJ5FOWUDXW" target="_blank">View Certificate</a>
-        <p class="issued_on">Issued on: 21 Aug, 2025</p>
-    </div>
-    <div class="box21">
-        <p class="issued_by">Issued by: Google</p>
-        <a  class="certificate_links" href="https://www.coursera.org/account/accomplishments/certificate/R6W080CY23N0" target="_blank">View Certificate</a>
-        <p class="issued_on">Issued on: 21 Aug, 2025</p>
-    </div>
-    <div class="box22">
-        <p class="issued_by">Issued by: Google</p>
-        <a  class="certificate_links" href="https://www.coursera.org/account/accomplishments/certificate/JER23S1E53GZ" target="_blank">View Certificate</a>
-        <p class="issued_on">Issued on: 21 Aug, 2025</p>
-    </div>
-    <div class="box23">
-        <p class="issued_by">Issued by: MSU</p>
-        <a  class="certificate_links" href="https://www.coursera.org/account/accomplishments/certificate/I8K9XFK3TRG9" target="_blank">View Certificate</a>
-        <p class="issued_on">Issued on: 16 Aug, 2025</p>
+    <div class="spe_boxes">
+        <div class="box1"> 
+            <h3 class="spe_name1">Google Data Analytics</h3>
+            <p class="isued_by1">Issued by: Google</p>
+            <a class="link1" href="https://www.coursera.org/account/accomplishments/specialization/certificate/8ZOPXTFGKVFS" target="_blank"  >View Certificate</a>
+            <p class="isued_on1">Issued on: Aug 21, 2025</p>
+        </div>
+        <div class="box2">
+            <h3 class="spe_name2">Google AI Essentials</h3>
+            <p class="isued_by2">Issued by: Google</p>
+            <a class="link2" href="https://www.coursera.org/account/accomplishments/specialization/certificate/SM2GCUB28PFQ" target="_blank" >View Certificate</a>
+            <p class="isued_on2">Issued on: 20 Aug, 2025 </p>
+        </div>
     </div>
 
+    <div class="my_certis_heading">
+        <h1 class="cert_heading">Other Certifications</h1>
+    </div>
 
+    <div class="cer_boxes">
+        <div class="box3">
+            <p class="issued_by">Issued by: Google</p>
+            <a  class="certificate_links" href="https://www.coursera.org/account/accomplishments/certificate/VEYSAJMEDNIM" target="_blank">View Certificate</a>
+            <p class="issued_on">Issued on: 11 Aug, 2025</p>
+        </div>
+        <div class="box4">
+         <p class="issued_by">Issued by: DeepLearning.AI</p>
+            <a  class="certificate_links" href="https://www.coursera.org/account/accomplishments/certificate/D75HPBWP92WI" target="_blank">View Certificate</a>
+            <p class="issued_on">Issued on: 6 Aug, 2025</p>
+        </div>
+        <div class="box5">
+            <p class="issued_by">Issued by: Microsoft</p>
+            <a  class="certificate_links" href="https://www.coursera.org/account/accomplishments/certificate/EEWLIXQYPVKS" target="_blank">View Certificate</a>
+            <p class="issued_on">Issued on: 14 Jul, 2025</p>
+        </div>
+        <div class="box6">
+            <p class="issued_by">Issued by: IBM</p>
+            <a  class="certificate_links" href="https://www.coursera.org/account/accomplishments/certificate/U99SSU1SJEFY" target="_blank">View Certificate</a>
+            <p class="issued_on">Issued on: 18 Jul, 2025</p>
+        </div>
+        <div class="box7">
+            <p class="issued_by">Issued by: Google</p>
+            <a  class="certificate_links" href="https://www.coursera.org/account/accomplishments/certificate/OY89S1M75G3X" target="_blank">View Certificate</a>
+            <p class="issued_on">Issued on: 20 Aug, 2025</p>
+        </div>
+        <div class="box8">
+            <p class="issued_by">Issued by: Microsoft</p>
+            <a  class="certificate_links" href="https://www.coursera.org/account/accomplishments/certificate/NCYW8KPM2FN7" target="_blank">View Certificate</a>
+            <p class="issued_on">Issued on: 5 Aug, 2025</p>
+        </div>
+        <div class="box9">
+            <p class="issued_by">Issued by: Coursera</p>
+            <a  class="certificate_links" href="https://www.coursera.org/account/accomplishments/certificate/UF4ID46W9NTC" target="_blank">View Certificate</a>
+            <p class="issued_on">Issued on: 9 Jul, 2025</p>
+        </div>
+        <div class="box10">
+         <p class="issued_by">Issued by: Google</p>
+         <a  class="certificate_links" href="https://www.coursera.org/account/accomplishments/certificate/HFDCDJ5SXSZ4" target="_blank">View Certificate</a>
+         <p class="issued_on">Issued on: 19 Aug, 2025</p>
+        </div>
+        <div class="box11">
+         <p class="issued_by">Issued by: Google</p>
+         <a  class="certificate_links" href="https://www.coursera.org/account/accomplishments/verify/V4TLR6NVYLC5" target="_blank">View Certificate</a>
+            <p class="issued_on">Issued on: 19 Aug, 2025</p>
+        </div>
+        <div class="box12">
+            <p class="issued_by">Issued by: Google</p>
+            <a  class="certificate_links" href="https://www.coursera.org/account/accomplishments/certificate/8GZJ9SEZLYKY" target="_blank">View Certificate</a>
+            <p class="issued_on">Issued on: 29 Jul, 2025</p>
+        </div>
+        <div class="box13">
+            <p class="issued_by">Issued by: Google</p>
+            <a  class="certificate_links" href="https://www.coursera.org/account/accomplishments/certificate/48IFCMN7Z50A" target="_blank">View Certificate</a>
+            <p class="issued_on">Issued on: 24 Jul, 2025</p>
+        </div>
+        <div class="box14">
+            <p class="issued_by">Issued by: Google</p>
+            <a  class="certificate_links" href="https://www.coursera.org/account/accomplishments/certificate/F1UORVYWZ1N6" target="_blank">View Certificate</a>
+            <p class="issued_on">Issued on: 26 Jul, 2025</p>
+        </div>
+        <div class="box15">
+         <p class="issued_by">Issued by: Google</p>
+            <a  class="certificate_links" href="https://www.coursera.org/account/accomplishments/certificate/ST1X0F9FSGGV" target="_blank">View Certificate</a>
+         <p class="issued_on">Issued on: 19 Aug, 2025</p>
+        </div>
+        <div class="box16">
+            <p class="issued_by">Issued by: Google</p>
+            <a  class="certificate_links" href="https://www.coursera.org/account/accomplishments/certificate/0A27RY7OUY74" target="_blank">View Certificate</a>
+            <p class="issued_on">Issued on: 21 Aug, 2025</p>
+        </div>
+        <div class="box17">
+            <p class="issued_by">Issued by: Google</p>
+            <a  class="certificate_links" href="https://www.coursera.org/account/accomplishments/certificate/BKKV8KK9AX2D" target="_blank">View Certificate</a>
+            <p class="issued_on">Issued on: 21 Aug, 2025</p>
+        </div>
+        <div class="box18">
+         <p class="issued_by">Issued by: UCI</p>
+            <a  class="certificate_links" href="https://www.coursera.org/account/accomplishments/certificate/0IPZAULNRZEO" target="_blank">View Certificate</a>
+            <p class="issued_on">Issued on: 19 Jul, 2025</p>
+        </div>
+        <div class="box19">
+            <p class="issued_by">Issued by: Google</p>
+            <a  class="certificate_links" href="https://www.coursera.org/account/accomplishments/certificate/4PMWWIQ74185" target="_blank">View Certificate</a>
+            <p class="issued_on">Issued on: 21 Aug, 2025</p>
+        </div>
+        <div class="box20">
+            <p class="issued_by">Issued by: Google</p>
+            <a  class="certificate_links" href="https://www.coursera.org/account/accomplishments/certificate/QDVJ5FOWUDXW" target="_blank">View Certificate</a>
+            <p class="issued_on">Issued on: 21 Aug, 2025</p>
+        </div>
+        <div class="box21">
+            <p class="issued_by">Issued by: Google</p>
+            <a  class="certificate_links" href="https://www.coursera.org/account/accomplishments/certificate/R6W080CY23N0" target="_blank">View Certificate</a>
+            <p class="issued_on">Issued on: 21 Aug, 2025</p>
+        </div>
+        <div class="box22">
+            <p class="issued_by">Issued by: Google</p>
+            <a  class="certificate_links" href="https://www.coursera.org/account/accomplishments/certificate/JER23S1E53GZ" target="_blank">View Certificate</a>
+            <p class="issued_on">Issued on: 21 Aug, 2025</p>
+        </div>
+        <div class="box23">
+            <p class="issued_by">Issued by: MSU</p>
+            <a  class="certificate_links" href="https://www.coursera.org/account/accomplishments/certificate/I8K9XFK3TRG9" target="_blank">View Certificate</a>
+            <p class="issued_on">Issued on: 16 Aug, 2025</p>
+        </div>
 
-</div>
-
+    </div>
+    <!-- services part start -->
+     <h1 id="my_services">Services</h1>
+     <div class="outer_services_div">
+        <div class="inner_services_div">
+            <div class="service1box">
+                
+            </div>
+        </div>
+     </div>
 
 </body>
 </html>
