--- a/index.html
+++ b/index.html
@@ -235,6 +235,10 @@
             <div class="service1box">
                 
             </div>
+            <div class="service2box">
+                
+            </div>
+
         </div>
      </div>
 
