--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 
     <div class="aboutme_things">
         <section class="about_image"><img src="eshal.jpg" class="eshallongpic" ></section>
-        <div class="aboutmeintro"><p>I am a passionate Project Manager with strong expertise in handling projects, coordinating teams, and ensuring successful outcomes. Over the years, I have also gained experience in Data Analysis and Frontend Development using HTML, CSS, and building logical structures for websites.</p>
+        <div class="aboutmeintro"><p class="about_me_intro_line_1">I am a passionate Project Manager with strong expertise in handling projects, coordinating teams, and ensuring successful outcomes. I have also gained experience in Data Analysis and Frontend Development using HTML, CSS, and building logical structures for websites.</p>
             <p>Being Google Certified, I bring credibility, creativity, and focus to every project, turning ideas into impactful results.</p>
                     <div class="skills">
         <div class="skill">
