--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/css/all.min.css">
 </head>
 <body class="Body">
     <div id="home"></div>
@@ -229,18 +230,41 @@
 
     </div>
     <!-- services part start -->
-     <h1 id="my_services">Services</h1>
-     <div class="outer_services_div">
+    <h1 id="my_services">Services</h1>
+    <div class="outer_services_div">
         <div class="inner_services_div">
             <div class="service1box">
-                
+                <h3>01</h3>
+                <h2>Handling Projects</h2>
+                <P class="services_caption">Efficiently handling projects from planning to delivery, ensuring timely completion and quality results</P>
+                <p class="services_readmore">Read More </p>
+                <i class="fa-solid fa-arrow-right"></i>
             </div>
-            <div class="service2box">
-                
+            <div class="service1box">
+                <h3>02</h3>
+                <h2>Youtube SEO</h2>
+                <P class="services_caption">Optimize your videos with keywords, tags, and strategies to boost rankings and reach more viewers</P>
+                <p class="services_readmore" >Read More </p>
+                <i class="fa-solid fa-arrow-right"></i>
+            </div>
+            <div class="service1box">
+                <h3>03</h3>
+                <h2>Content Writing</h2>
+                <P class="services_caption">Engaging and well-structured content tailored to your audience for blogs, websites, and social media</P>
+                <p class="services_readmore">Read More </p>
+                <i class="fa-solid fa-arrow-right"></i>
+            </div>
+            <div class="service1box">
+                <h3>04</h3>
+                <h2>Web Developing</h2>
+                <P class="services_caption">Clean, responsive, and modern websites built with HTML & CSS for a seamless user experiences</P>
+                <p class="services_readmore">Read More </p>
+                <i class="fa-solid fa-arrow-right"></i>
             </div>
 
         </div>
-     </div>
+    </div>
+    <h1>My Latest Work</h1>
 
 </body>
 </html>
