--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
                 <a href="#about_me" class="Aboutme">About Me</a>
                 <a href="#certificationspart" class="Skills">My Certifications</a>
                 <a href="#my_services" class="Services">Services</a>
-                <a href="#" class="Contact">Contact</a>
+                <a href="#connect-contact-me" class="Contact">Contact</a>
             </div>
         <div class="outer_conme_div">
-            <a  href="#"  class="conme_tag">
+            <a  href="#connect-contact-me"  class="conme_tag">
                 <div class="conme_div"><p>Connect With Me</p></div>
             </a>
         </div>
@@ -50,7 +50,7 @@
 
     <div class="buttons_container">
         <div class="outer_conme_div2">
-            <a class="conme_tag2" href="#">
+            <a class="conme_tag2" href="#connect-contact-me">
                 <div class="conme_div2"><p>Connect With Me</p></div>
             </a>
         </div>
@@ -264,7 +264,7 @@
 
         </div>
     </div>
-    <h1>My Latest Work</h1>
+    <h1 id="connect-contact-me">Get in touch</h1>
 
 </body>
 </html>
