--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/@iconscout/unicons@4.2.0/css/line.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/css/all.min.css">
+
 </head>
 <body class="Body">
     <div id="home"></div>
@@ -264,7 +266,52 @@
 
         </div>
     </div>
+
+    <!-- conect with me section -->
     <h1 id="connect-contact-me">Get in touch</h1>
+    <div class="outer-div-lets-talk">
+        <div class="connect_left">
+            <h1 class="lets_talk">Let's Talk</h1>
+            <p class="connect_left_line">I'm currently avaliable to take on new projects, so feel free to send me a message about anything that you want me to work on. You can contact anytime.</p>
+            <div class="connections_email">
+                <i class="fa-regular fa-envelope"></i>
+                <p>physicslover358@gmail.com</p>
+            </div>
+            <div class="connections_call">
+                <i class="fa-solid fa-phone-volume" style="color: #fafffe;"></i>
+                <p> +92-301-7108427</p>
+            </div>
+            <div class="connections_location">
+                <i class="fa-solid fa-location-dot" style="color: #fcfcfc;"></i>
+                <p>Faisalabad, Pakistan</p>
+            </div>
+        </div>
+    
+        <div class="connect_right">
+
+                <form action="https://formspree.io/f/xdkldgeg" method="POST">
+                    <div class="connect_name">
+                        <label>
+                            <h3 class="form_label">Your Name</h3>
+                            <input type="text" name="text"   class="user_input_text"  placeholder="Enter your name" required>
+                        </label>
+                    </div>
+                    <div class="connect_email">
+                        <label>
+                         <h3 class="form_label">Your Email</h3>
+                            <input type="email" class="user_input_text" placeholder="Enter your email"  name="email" required>
+                        </label>
+                    </div>
+                    <div class="connect_mesg">
+                        <label>
+                        <h3 class="form_label">Write your message here</h3>
+                        <textarea name="message" class="user_input_text"  rows="8" placeholder="Enter your message" required></textarea>
+                        </label>
+                    </div>
+                    <button type="submit">Send</button>
+                </form>
+        </div>
+    </div>
 
 </body>
 </html>
