--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@
                 <p>physicslover358@gmail.com</p>
             </div>
             <div class="connections_call">
-                <i class="fa-solid fa-phone-volume" style="color: #fafffe;"></i>
+                <i class="fa-solid fa-phone-volume" id="connect_melogo3" style="color: #fafffe;"></i>
                 <p> +92-301-7108427</p>
             </div>
             <div class="connections_location">
@@ -305,14 +305,19 @@
                     <div class="connect_mesg">
                         <label>
                         <h3 class="form_label">Write your message here</h3>
-                        <textarea name="message" class="user_input_text"  rows="8" placeholder="Enter your message" required></textarea>
+                        <textarea name="message" class="user_input_text"  rows="15" placeholder="Enter your message" required></textarea>
                         </label>
                     </div>
-                    <button type="submit">Send</button>
+                    <button type="submit"  class="submit_button">Submit now</button>
                 </form>
         </div>
     </div>
 
+    <div class="bottom_wrapper">
+        <div class="bottom_area_div"></div>
+        <p class="bottom_intro_line">I am a Project Manager and skilled in data analysis, MS Office, AI prompting,
+        and frontend developing using HTML and CSS.</p>
+    </div>
 </body>
 </html>
 
