--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@
                 <p>physicslover358@gmail.com</p>
             </div>
             <div class="connections_call">
-                <i class="fa-solid fa-phone-volume" id="connect_melogo3" style="color: #fafffe;"></i>
+                <i class="fa-solid fa-phone-volume"  style="color: #fafffe;"></i>
                 <p> +92-301-7108427</p>
             </div>
             <div class="connections_location">
@@ -317,6 +317,21 @@
         <div class="bottom_area_div"></div>
         <p class="bottom_intro_line">I am a Project Manager and skilled in data analysis, MS Office, AI prompting,
         and frontend developing using HTML and CSS.</p>
+        <div class="bottom_logos">
+            <i class="fa-brands fa-linkedin fa-xl" style="color: white;"></i>
+            <i class="fa-brands fa-instagram fa-xl" style="color: white;"></i>
+        </div>
+    </div>
+    <hr class="horizontal_line">
+
+
+    <div class="bottom_div_bottom">
+        <div class="bottom_content_left_bottom">
+                <p> &copy; 2025 Eshal Aslam.All rights reserved</p>
+        </div>
+        <div class="bottom_content_right_bottom">
+            <pre>Terms of Services    Privacy Policy   Connect with me</pre>
+        </div>
     </div>
 </body>
 </html>
