--- a/index.html
+++ b/index.html
@@ -318,8 +318,8 @@
         <p class="bottom_intro_line">I am a Project Manager and skilled in data analysis, MS Office, AI prompting,
         and frontend developing using HTML and CSS.</p>
         <div class="bottom_logos">
-            <i class="fa-brands fa-linkedin fa-xl" style="color: white;"></i>
-            <i class="fa-brands fa-instagram fa-xl" style="color: white;"></i>
+            <a href="https://www.linkedin.com/in/eshal-fatima-090794341" target="_blank"><i class="fa-brands fa-linkedin fa-xl" style="color: white;"></i> </a>
+            <a href="https://www.instagram.com/seo_expert_1154?igsh=MTV1dmN5dHAyaDlnYw==" target="_blank"><i class="fa-brands fa-instagram fa-xl" style="color: white;"></i></a>
         </div>
     </div>
     <hr class="horizontal_line">
@@ -330,7 +330,7 @@
                 <p> &copy; 2025 Eshal Aslam.All rights reserved</p>
         </div>
         <div class="bottom_content_right_bottom">
-            <pre>Terms of Services    Privacy Policy   Connect with me</pre>
+            <pre>Terms of Services</pre>    <p>Privacy Policy</p>   <p>Connect with me</pre>
         </div>
     </div>
 </body>
