--- a/index.html
+++ b/index.html
@@ -16,7 +16,14 @@
     <div id="home"></div>
     <header class="header_head">
         <div class="header_div">
+            
             <img src="logor.png" class="header_namelogo"> 
+                    <button class="menu-toggle">
+                        <i class="fas fa-bars"></i>
+                    </button>
+                    <button class="close-menu">
+                        <i class="fas fa-times"></i>
+                    </button>
             <div class="nav">
                 <a href="#" class="Home">Home</a>
                 <a href="#about_me" class="Aboutme">About Me</a>
