--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@
             <p class="connect_left_line">I'm currently avaliable to take on new projects, so feel free to send me a message about anything that you want me to work on. You can contact anytime.</p>
             <div class="connections_email">
                 <i class="fa-regular fa-envelope"></i>
-                <p>physicslover358@gmail.com</p>
+                <p>eshalfatima4150@gmail.com</p>
             </div>
             <div class="connections_call">
                 <i class="fa-solid fa-phone-volume"  style="color: #fafffe;"></i>
