--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <h1 class="Hlines" id="typewriter">
         <span id="Line1ani">
             <span class="introlineclr">
-            I'm Eshal Fatima, 
+            I'm Eshal , 
             </span>
             <span class="pro">Project</span><br>
         </span>
