--- a/index.html
+++ b/index.html
@@ -44,7 +44,8 @@
             <div class="nav">
                 <a href="#" class="Home">Home</a>
                 <a href="#about_me" class="Aboutme">About Me</a>
-                <a href="#certificationspart" class="Skills">My Certifications</a>
+                <a href="#connect-contact-me" class="Contact">Latest Work</a>
+                <a href="#certificationspart" class="Skills">Certifications</a>
                 <a href="#my_services" class="Services">Services</a>
                 <a href="#connect-contact-me" class="Contact">Contact</a>
             </div>
@@ -96,7 +97,7 @@
 
     <div class="aboutme_things">
         <section class="about_image"><img src="eshal.jpg" class="eshallongpic" ></section>
-        <div class="aboutmeintro"><p class="about_me_intro_line_1">I am a passionate Project Manager with strong expertise in handling projects, coordinating teams, and ensuring successful outcomes. I have also gained experience in Data Analysis and Frontend Development using HTML, CSS, and building logical structures for websites.</p>
+        <div class="aboutmeintro"><p class="about_me_intro_line_1">I am a passionate Project Manager with strong expertise in handling projects, coordinating teams, and ensuring successful outcomes. I have also gained experience in Data Analysis and Frontend Development using HTML, CSS, and building logical structures for websites. Additionally, I bring skills in photography and videography.</p>
             <p>Being Google Certified, I bring credibility, creativity, and focus to every project, turning ideas into impactful results.</p>
                     <div class="skills">
         <div class="skill">
@@ -119,8 +120,11 @@
 
         </div>
     </div>
+    <!-- latest workk -->
 
-
+<section>
+    <h1 id="latest_work">My Latest Work</h1>
+</section>
 
 
     <h1 class="certificatesand" id="certificationspart">My Certifications</h1>
