--- a/index.html
+++ b/index.html
@@ -10,8 +10,6 @@
     <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/@iconscout/unicons@4.2.0/css/line.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/css/all.min.css">
-<head>
-  ...
   <script>
     document.addEventListener("DOMContentLoaded", function () {
       document.addEventListener("contextmenu", e => e.preventDefault());
@@ -44,7 +42,7 @@
             <div class="nav">
                 <a href="#" class="Home">Home</a>
                 <a href="#about_me" class="Aboutme">About Me</a>
-                <a href="#connect-contact-me" class="Contact">Latest Work</a>
+                <!-- <a href="#latest_work" class="Contact">Latest Work</a> -->
                 <a href="#certificationspart" class="Skills">Certifications</a>
                 <a href="#my_services" class="Services">Services</a>
                 <a href="#connect-contact-me" class="Contact">Contact</a>
@@ -122,9 +120,18 @@
     </div>
     <!-- latest workk -->
 
-<section>
-    <h1 id="latest_work">My Latest Work</h1>
-</section>
+    <!-- <section>
+        <h1 id="latest_work">My Latest Work</h1>
+    </section>
+      <div>
+        <div class="latestworkweb">
+
+        </div>
+      </div>
+
+    <div class="latest_wok_outer_div">
+        
+    </div> -->
 
 
     <h1 class="certificatesand" id="certificationspart">My Certifications</h1>
