--- a/index.html
+++ b/index.html
@@ -65,9 +65,9 @@
             <span class="introlineclr">
             I'm Eshal Aslam, 
             </span>
-            <span class="pro">Project</span><br>
+            <span class="pro">Frontend</span><br>
         </span>
-        <span id="Line2ani">Manager based in Pakistan.</span>
+        <span id="Line2ani">Web Developer based in Pakistan.</span>
     </h1>
 
     <p class="line1">I am a Project Manager and skilled in data analysis, MS Office, AI prompting, <br>and frontend developing using HTML and CSS.</p>
