--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/@iconscout/unicons@4.2.0/css/line.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/css/all.min.css">
-    <!-- <script>
+    <script>
         document.addEventListener("DOMContentLoaded", function () {
             document.addEventListener("contextmenu", e => e.preventDefault());
             document.addEventListener("keydown", e => {
@@ -24,7 +24,7 @@
                 }
             });
         });
-    </script> -->
+    </script>
 </head>
 
 </head>
@@ -246,7 +246,7 @@
         </div>
         <div class="box23">
             <h3 class="spe_name2">Consonants of American<br> English Pronunciation</h3>
-            <a class="certificate_links" href="https://www.coursera.org/account/accomplishments/verify/0IPZAULNRZEO" 
+            <a class="certificate_links" href="https://www.coursera.org/account/accomplishments/verify/0IPZAULNRZEO"
                 target="_blank">View Certificate</a>
             <p class="isued_by2">Issued by: UCI</p>
         </div>
@@ -276,13 +276,14 @@
         </div>
         <div class="box23">
             <h3 class="spe_name2">Freelancing</h3>
-            <a class="certificate_links" href=" https://digiskills.pk/verify/" href="https://www.coursera.org/account/accomplishments/verify/0A27RY7OUY74"
-                target="_blank">View Certificate</a>
+            <a class="certificate_links" href=" https://digiskills.pk/verify/"
+                href="https://www.coursera.org/account/accomplishments/verify/0A27RY7OUY74" target="_blank">View
+                Certificate</a>
             <p class="isued_by2">Issued by: Ignite, Virtual<br> University, Government</p>
         </div>
         <div class="box17">
             <h3 class="spe_name2">Programming <br>with Javascript</h3>
-            <a class="certificate_links" href="https://www.coursera.org/account/accomplishments/verify/M2D91UEANYTP" 
+            <a class="certificate_links" href="https://www.coursera.org/account/accomplishments/verify/M2D91UEANYTP"
                 target="_blank">View Certificate</a>
             <p class="isued_by2">Issued by: Meta</p>
         </div>
@@ -364,8 +365,7 @@
         </div>
         <div class="box23">
             <h3 class="spe_name2">Video Editing, Animation <br>and Vlogging</h3>
-            <a class="certificate_links" href="https://digiskills.pk/verify/"
-                target="_blank">View Certificate</a>
+            <a class="certificate_links" href="https://digiskills.pk/verify/" target="_blank">View Certificate</a>
             <p class="isued_by2">Issued by: Ignite, Virtual<br> University, Government</p>
         </div>
 
@@ -375,34 +375,37 @@
     <div class="outer_services_div">
         <div class="inner_services_div">
             <div class="service1box">
-                <h3>01</h3>
+                <div class="service1box">
+                    <h3>01</h3>
+                    <h2>Web Developing</h2>
+                    <P class="services_caption">Clean, responsive, and modern websites built with HTML & CSS for a
+                        seamless
+                        user experiences</P>
+                    <p class="services_readmore">Read More </p>
+                    <i class="fa-solid fa-arrow-right"></i>
+                </div>
+                <div class="service1box">
+                    <h3>02</h3>
+                    <h2>Youtube SEO</h2>
+                    <P class="services_caption">Optimize your videos with keywords, tags, and strategies to boost
+                        rankings
+                        and reach more viewers</P>
+                    <p class="services_readmore">Read More </p>
+                    <i class="fa-solid fa-arrow-right"></i>
+                </div>
+                <div class="service1box">
+                    <h3>03</h3>
+                    <h2>Content Writing</h2>
+                    <P class="services_caption">Engaging and well-structured content tailored to your audience for
+                        blogs,
+                        websites, and social media</P>
+                    <p class="services_readmore">Read More </p>
+                    <i class="fa-solid fa-arrow-right"></i>
+                </div>
+                <h3>04</h3>
                 <h2>Handling Projects</h2>
                 <P class="services_caption">Efficiently handling projects from planning to delivery, ensuring timely
                     completion and quality results</P>
-                <p class="services_readmore">Read More </p>
-                <i class="fa-solid fa-arrow-right"></i>
-            </div>
-            <div class="service1box">
-                <h3>02</h3>
-                <h2>Youtube SEO</h2>
-                <P class="services_caption">Optimize your videos with keywords, tags, and strategies to boost rankings
-                    and reach more viewers</P>
-                <p class="services_readmore">Read More </p>
-                <i class="fa-solid fa-arrow-right"></i>
-            </div>
-            <div class="service1box">
-                <h3>03</h3>
-                <h2>Content Writing</h2>
-                <P class="services_caption">Engaging and well-structured content tailored to your audience for blogs,
-                    websites, and social media</P>
-                <p class="services_readmore">Read More </p>
-                <i class="fa-solid fa-arrow-right"></i>
-            </div>
-            <div class="service1box">
-                <h3>04</h3>
-                <h2>Web Developing</h2>
-                <P class="services_caption">Clean, responsive, and modern websites built with HTML & CSS for a seamless
-                    user experiences</P>
                 <p class="services_readmore">Read More </p>
                 <i class="fa-solid fa-arrow-right"></i>
             </div>
@@ -461,8 +464,9 @@
 
     <div class="bottom_wrapper">
         <div class="bottom_area_div"></div>
-        <p class="bottom_intro_line">I am a Front-end Web developer and skilled in, MS Office(Excel, Powerpoint, and Publisher etc), AI prompting,
-            and Software Analysis (UML Diagrams and ER Modeling).</p> 
+        <p class="bottom_intro_line">I am a Front-end Web developer and skilled in, MS Office(Excel, Powerpoint, and
+            Publisher etc), AI prompting,
+            and Software Analysis (UML Diagrams and ER Modeling).</p>
         <div class="bottom_logos">
             <a href="https://www.linkedin.com/in/eshal-fatima-090794341" target="_blank"><i
                     class="fa-brands fa-linkedin fa-xl" style="color: white;"></i> </a>
