--- a/Eshal-Portfolio/index.html
+++ b/Eshal-Portfolio/index.html
@@ -68,7 +68,7 @@
     <h1 class="Hlines" id="typewriter">
         <span id="Line1ani">
             <span class="introlineclr">
-                I'm Eshal Aslam,
+                I'm Eshal ,
             </span>
             <span class="pro">Frontend</span><br>
         </span>
