4 baje l pas ke chanhes

--- a/Eshal-Portfolio/index.html
+++ b/Eshal-Portfolio/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Eshal Porfolio</title>
+    <link rel="icon" sizes="128*128" href="Eshal_logo_large.png">
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
