Target blank added

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 
 
         <div class="outer_resume_div">
-            <a class="resume_tag" href="Eshal_WebDeveloper.pdf">
+            <a class="resume_tag" href="Eshal_WebDeveloper.pdf" target="_blank">
                 <div class="resume_div">
                     <p>My Resume</p>
                 </div>
