--- a/index.html
+++ b/index.html
@@ -438,8 +438,7 @@
 
         <div class="connect_right">
 
-            <form action="https://formspree.io/eshalfatima4150@gmail.com" method="POST">
-            <input type="hidden" name="_redirect" value="">
+            <form action="https://formspree.io/f/xdkldgeg" method="POST">
                 <div class="connect_name">
                     <label>
                         <h3 class="form_label">Your Name</h3>
